fix mobile menu z-index

--- a/docroot/sites/usanetwork/themes/aurora_usa/sass/design/modules/new-show-design/_usa-header.scss
+++ b/docroot/sites/usanetwork/themes/aurora_usa/sass/design/modules/new-show-design/_usa-header.scss
@@ -211,22 +211,22 @@
     background-color: black;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
     overflow: visible;
-    position: relative;
+    position: static;
     width: 100%;
+    z-index: 99999;
 
     will-change: transform;
     @include transition(transform 200ms linear);
 
 
     &.menu-open {
-      position: fixed;
+      position: fixed !important;
       overflow: hidden;
       height: 100vh;
     }
 
     &.usa-sticky-header-initialized {
       position: absolute;
-      z-index: 99999;
     }
 
     &.usa-sticky-header {
@@ -270,6 +270,7 @@
 
     .header-inner {
       margin: 0 auto;
+      position: relative;
       width: 100%;
       @include breakpoint($bp-min-1601-width) {
         width: 1600px;
